--- a/estilos.css
+++ b/estilos.css
@@ -41,7 +41,7 @@ body {
 
 /* Estilos para el encabezado */
 header {
-  background-color: #333;
+  background-color: #CD6155;
   color: #fff;
   padding: 20px;
 }
@@ -78,10 +78,11 @@ nav a:hover {
 
 /* Estilos para el pie de página */
 footer {
-  background-color: #333;
+  background-color: #A93226;
   color: #fff;
   padding: 20px;
   text-align: center;
+  margin-top: 30px;
 }
 
 footer p {
@@ -108,7 +109,7 @@ input, textarea {
 }
 
 button {
-  background-color: #4CAF50;
+  background-color: #2980B9;
   color: white;
   padding: 10px;
   border: none;
@@ -118,5 +119,5 @@ button {
 }
 
 button:hover {
-  background-color: #3e8e41;
+  background-color: #1F618D;
 }
