--- a/estilos.css
+++ b/estilos.css
@@ -16,6 +16,7 @@ body {
 #inicio h2 {
   font-size: 36px;
   margin-bottom: 20px;
+  text-align: center;
 }
 
 #inicio p {
@@ -24,19 +25,28 @@ body {
 }
 
 /* Estilos para la sección "Sobre Mí" */
-#sobre-mi {
-  padding: 50px;
+h2 {
+  margin-left: 20px;
 }
 
 #sobre-mi h2 {
   font-size: 36px;
   margin-bottom: 20px;
+  text-align: center;
 }
 
 #sobre-mi p {
   font-size: 18px;
   color: #555;
   line-height: 1.5;
+}
+p{
+  text-align: center;
+}
+
+/* Estilos contacto*/
+#contacto h2 {
+  text-align: center;
 }
 
 /* Estilos para el encabezado */
